update the past action only when showing it

BUG:243041